--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,12 +2,17 @@
     <string name="app_name">دانشجویار</string>
     <string name="androidTitle">"جامع ترین دوره آموزش برنامه نویسی اندروید (کاتلین، فلاتر و جاوا)</string>
     <string name="afzoneTitle">"دوره آموزش افزونه نویسی وردپرس، پلاگین نویسی حرفه ای برای وردپرس"</string>
-   <string name="an1">آموزش کامل نصب و راه اندازی نرم افزار اندروید استودیو</string>
-   <string name="an2">آموزش برنامه نویسی با کمک جت جی پی تی و گوگل بارد</string>
-   <string name="an3">آموزش فلاتر و جاوا جهت تکمیل رزومه</string>
-   <string name="an4">ایجاد اپلیکیشن نمایش قیمت ارز و طلا به صورت آنلاین</string>
-   <string name="an5">آموزش اعتبارسنجی و احراز هویت کاربران با ایمیل</string>
-   <string name="an6">آموزش تخصصی ارتباط با سرور و آنلاین کردن اپلیکیشن ها</string>
-   <string name="an7">دریافت مدرک طلایی قابل استعلام پس از اتمام دوره</string>
+    <string name="an1">آموزش کامل نصب و راه اندازی نرم افزار اندروید استودیو</string>
+    <string name="an2">آموزش برنامه نویسی با کمک جت جی پی تی و گوگل بارد</string>
+    <string name="an3">آموزش فلاتر و جاوا جهت تکمیل رزومه</string>
+    <string name="an4">ایجاد اپلیکیشن نمایش قیمت ارز و طلا به صورت آنلاین</string>
+    <string name="an5">آموزش اعتبارسنجی و احراز هویت کاربران با ایمیل</string>
+    <string name="an6">آموزش تخصصی ارتباط با سرور و آنلاین کردن اپلیکیشن ها</string>
+    <string name="an7">دریافت مدرک طلایی قابل استعلام پس از اتمام دوره</string>
+    <string name="git1">آشنایی کامل با مفهوم و فلسفه سورس کنترل‌ها</string>
+    <string name="git2">مفاهیم اولیه در گیت، نظیر نصب و ساخت ریپازیتوری و ...</string>
+    <string name="git3">ایجاد شاخه‌ در گیت</string>
+    <string name="git4">جابجایی بین کامیت‌های مختلف</string>
+    <string name="git5">خطایابی و دیباگینگ بوسیله گیت</string>
 
 </resources>
